Added skeleton to other pages

--- a/pages/venue.html
+++ b/pages/venue.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Raleway:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/css-reset.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <title>Megan & Ryan's Wedding | October 2021</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/css-reset.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <title>Megan & Ryan's Wedding | October 2021</title>
-</head>
+  <body>
+    <nav>
+      <ul role="list">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="/pages/photos.html">Photos</a></li>
+        <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+        <li><a href="/pages/venue.html">Venue</a></li>
+        <li><a href="/pages/details.html">Details</a></li>
+      </ul>
+    </nav>
 
-<body>
-  <nav>
-    <ul role="list">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Photos</a></li>
-      <li><a href="#">Wedding Party</a></li>
-      <li><a href="#">Venue</a></li>
-      <li><a href="#">Details</a></li>
-    </ul>
-  </nav>
+    <header>
+      <h1>Venue</h1>
+      <h3>Where are we getting married?</h3>
+    </header>
 
-  <header>
-    <h1>Megan & Ryan</h1>
-    <h3>October 15th, 2021</h3>
-  </header>
+    <main class="container"></main>
 
-  <main>
-    <section>
-      <article>
-      </article>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2021 <a href="https://theryanfurrer.dev" target="_blank" rel="noopener noreferrer">Ryan Furrer</a></p>
-  </footer>
-</body>
-
+    <footer>
+      <p>
+        &copy; 2021
+        <a
+          href="https://theryanfurrer.dev"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Ryan Furrer</a
+        >
+        - made with ♥️
+      </p>
+    </footer>
+  </body>
 </html>
