--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <body>
     <nav>
       <ul role="list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Photos</a></li>
-        <li><a href="#">Wedding Party</a></li>
-        <li><a href="#">Venue</a></li>
-        <li><a href="#">Details</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/pages/photos.html">Photos</a></li>
+        <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+        <li><a href="/pages/venue.html">Venue</a></li>
+        <li><a href="/pages/details.html">Details</a></li>
       </ul>
     </nav>
 
