Styled Wedding Party page (mobile only)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     </header>
 
     <main class="container">
-      <section>
+      <section id="our-story">
+        <div>
+          <img src="/img/homepag-meg.jpg" alt="Megan" />
+          <img src="/img/homepage-ryan.jpg" alt="Ryan" />
+        </div>
         <article>
           <h2>Our Story</h2>
           <p>
@@ -70,6 +74,10 @@
             had ever believed in love at first sight or fate, it seemed they
             couldn’t ignore the signs in one another.
           </p>
+          <img
+            src="/img/homepage-family.jpg"
+            alt="Megan and Ryan on a couch with their dogs, Maggie and Charlie"
+          />
           <p>
             Ryan and Megan moved in together and built an apartment with the
             help of their families above Ryan’s parents home. Megan’s dogs,
