--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -31,7 +31,127 @@
       <h3>Who are we partying with?</h3>
     </header>
 
-    <main class="container"></main>
+    <main class="container">
+      <section id="wedding-party">
+        <article class="bridesmaids">
+          <h2>bridesmaids</h2>
+          <div class="photo-card">
+            <img
+              src="../img/wp-amanda.jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+            />
+            <p class="name">Amanda Laikin</p>
+            <p class="title">Maid of Honor</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-anna.jpg"
+              alt="Anna Young - Bridesmaid"
+              title="Anna Young - Bridesmaid"
+            />
+            <p class="name">Anna Young</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-emily.jpeg"
+              alt="Emily Baio - Bridesmaid"
+              title="Emily Baio - Bridesmaid"
+            />
+            <p class="name">Emily Baio</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-emily2.jpg"
+              alt="Emily Furrer - Bridesmaid"
+              title="Emily Furrer - Bridesmaid"
+            />
+            <p class="name">Emily Furrer</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-erin.JPG"
+              alt="Erin Werner - Bridesmaid"
+              title="Erin Werner - Bridesmaid"
+            />
+            <p class="name">Erin Werner</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-joanna.jpeg"
+              alt="Joanna Bonura - Bridesmaid"
+              title="Joanna Bonura - Bridesmaid"
+            />
+            <p class="name">Joanna Bonura</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-sam.JPG"
+              alt="Samantha Motta - Bridesmaid"
+              title="Samantha Motta - Bridesmaid"
+            />
+            <p class="name">Samantha Motta</p>
+            <p class="title">Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-audrey.jpg"
+              alt="Audrey Ryan - Junior Bridesmaid"
+              title="Audrey Ryan - Junior Bridesmaid"
+            />
+            <p class="name">Audrey Ryan</p>
+            <p class="title">Junior Bridesmaid</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-jillian.jpg"
+              alt="Jillian Ryan - Junior Bridesmaid"
+              title="Jillian Ryan - Junior Bridesmaid"
+            />
+            <p class="name">Jillian Ryan</p>
+            <p class="title">Junior Bridesmaid</p>
+          </div>
+        </article>
+        <article class="groomsmen">
+          <h2>Groomsmen</h2>
+          <div class="photo-card">
+            <img
+              src="../img/wp-amanda.jpg"
+              alt="Walter Furrer - Best Man"
+              title="Walter Furrer - Best Man"
+            />
+            <p class="name">Walter Furrer</p>
+            <p class="title">Best Man</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-amanda.jpg"
+              alt="Anthony Calderaro - Groomsman"
+              title="Anthony Calderaro - Groomsman"
+            />
+            <p class="name">Anthony Calderaro</p>
+            <p class="title">Groomsman</p>
+          </div>
+        </article>
+        <article class="officiant">
+          <h2>Officiant</h2>
+          <div class="photo-card">
+            <img
+              src="../img/wp-kerri.jpg"
+              alt="Kerri Mitchell - Officiant"
+              title="Kerri Mitchell - Officiant"
+            />
+            <p class="name">Kerri Mitchell</p>
+            <p class="title">Officiant</p>
+          </div>
+        </article>
+      </section>
+    </main>
 
     <footer>
       <p>
