Added wedding party photos

--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -40,6 +40,7 @@
               src="../img/wp-amanda.jpg"
               alt="Amanda Laikin - Maid of Honor"
               title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
             />
             <p class="name">Amanda Laikin</p>
             <p class="title">Maid of Honor</p>
@@ -49,6 +50,7 @@
               src="../img/wp-anna.jpg"
               alt="Anna Young - Bridesmaid"
               title="Anna Young - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Anna Young</p>
             <p class="title">Bridesmaid</p>
@@ -58,6 +60,7 @@
               src="../img/wp-emily.jpeg"
               alt="Emily Baio - Bridesmaid"
               title="Emily Baio - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Emily Baio</p>
             <p class="title">Bridesmaid</p>
@@ -67,6 +70,7 @@
               src="../img/wp-emily2.jpg"
               alt="Emily Furrer - Bridesmaid"
               title="Emily Furrer - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Emily Furrer</p>
             <p class="title">Bridesmaid</p>
@@ -76,6 +80,7 @@
               src="../img/wp-erin.JPG"
               alt="Erin Werner - Bridesmaid"
               title="Erin Werner - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Erin Werner</p>
             <p class="title">Bridesmaid</p>
@@ -85,6 +90,7 @@
               src="../img/wp-joanna.jpeg"
               alt="Joanna Bonura - Bridesmaid"
               title="Joanna Bonura - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Joanna Bonura</p>
             <p class="title">Bridesmaid</p>
@@ -94,6 +100,7 @@
               src="../img/wp-sam.JPG"
               alt="Samantha Motta - Bridesmaid"
               title="Samantha Motta - Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Samantha Motta</p>
             <p class="title">Bridesmaid</p>
@@ -103,6 +110,7 @@
               src="../img/wp-audrey.jpg"
               alt="Audrey Ryan - Junior Bridesmaid"
               title="Audrey Ryan - Junior Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Audrey Ryan</p>
             <p class="title">Junior Bridesmaid</p>
@@ -112,6 +120,7 @@
               src="../img/wp-jillian.jpg"
               alt="Jillian Ryan - Junior Bridesmaid"
               title="Jillian Ryan - Junior Bridesmaid"
+              loading="lazy"
             />
             <p class="name">Jillian Ryan</p>
             <p class="title">Junior Bridesmaid</p>
@@ -121,20 +130,72 @@
           <h2>Groomsmen</h2>
           <div class="photo-card">
             <img
-              src="../img/wp-amanda.jpg"
+              src="../img/wp-walter.jpeg"
               alt="Walter Furrer - Best Man"
               title="Walter Furrer - Best Man"
+              loading="lazy"
             />
             <p class="name">Walter Furrer</p>
             <p class="title">Best Man</p>
           </div>
           <div class="photo-card">
             <img
-              src="../img/wp-amanda.jpg"
+              src="../img/wp-anthony.jpg"
               alt="Anthony Calderaro - Groomsman"
               title="Anthony Calderaro - Groomsman"
+              loading="lazy"
             />
             <p class="name">Anthony Calderaro</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-richard.JPG"
+              alt="Richard Motta - Groomsman"
+              title="Anthony Calderaro - Groomsman"
+              loading="lazy"
+            />
+            <p class="name">Richard Motta</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-joe.jpeg"
+              alt="Joseph Ryan - Groomsman"
+              title="Joseph Ryan - Groomsman"
+              loading="lazy"
+            />
+            <p class="name">Joseph Ryan</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-tom.jpg"
+              alt="Thomas Ryan - Groomsman"
+              title="Thomas Ryan - Groomsman"
+              loading="lazy"
+            />
+            <p class="name">Thomas Ryan</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-moe.jpg"
+              alt="Moe Tompkins - Groomsman"
+              title="Moe Tompkins - Groomsman"
+              loading="lazy"
+            />
+            <p class="name">Moe Tompkins</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-didier.jpg"
+              alt="Didier Valles - Groomsman"
+              title="Didier Valles - Groomsman"
+              loading="lazy"
+            />
+            <p class="name">Didier Valles</p>
             <p class="title">Groomsman</p>
           </div>
         </article>
@@ -145,6 +206,7 @@
               src="../img/wp-kerri.jpg"
               alt="Kerri Mitchell - Officiant"
               title="Kerri Mitchell - Officiant"
+              loading="lazy"
             />
             <p class="name">Kerri Mitchell</p>
             <p class="title">Officiant</p>
