--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <main class="container">
       <section id="our-story">
         <div>
-          <img src="/img/homepag-meg.jpg" alt="Megan" />
-          <img src="/img/homepage-ryan.jpg" alt="Ryan" />
+          <img src="/img/homepag-meg.jpg" alt="Megan" loading="lazy" />
+          <img src="/img/homepage-ryan.jpg" alt="Ryan" loading="lazy" />
         </div>
         <article>
           <h2>Our Story</h2>
@@ -77,6 +77,7 @@
           <img
             src="/img/homepage-family.jpg"
             alt="Megan and Ryan on a couch with their dogs, Maggie and Charlie"
+            loading="lazy"
           />
           <p>
             Ryan and Megan moved in together and built an apartment with the
