Add ID to "our story" section on Homepage, added venue page

--- a/pages/venue.html
+++ b/pages/venue.html
@@ -31,7 +31,49 @@
       <h3>Where are we getting married?</h3>
     </header>
 
-    <main class="container"></main>
+    <main class="container">
+      <section id="venue">
+        <article>
+          <div class="photo-card">
+            <img
+              src="../img/venue-hall.jpg"
+              alt="Grand Ballroom at Stewart Manor Country Club"
+              title="Grand Ballroom at Stewart Manor Country Club"
+              loading="lazy"
+            />
+            <p class="title">Grand Ballroom</p>
+          </div>
+          <h2>
+            <a
+              href="https://www.stewartmanor.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Stewart Manor Country Club</a
+            >
+          </h2>
+          <p id="address">
+            51 Salisbury Ave.<br />
+            Garden City, NY 11530
+          </p>
+          <p>
+            The Stewart Manor Country Club is a unique and beautifully
+            maintained location in Western Nassau County, New York. Megan and
+            Ryan fell in love with this venue at first sight, it was the first
+            venue they saw and knew they had their hearts set on it. Stewart
+            Manor's staff, rustic charm and delicious food makes it stand out
+            from so many other locations.
+          </p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.8036817593816!2d-73.68583858434063!3d40.72233804491946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c262e5f101b2f9%3A0xe945eb9316cdfe01!2sStewart%20Manor%20Country%20Club!5e0!3m2!1sen!2sus!4v1625944842145!5m2!1sen!2sus"
+            width="100%"
+            height="500px"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </article>
+      </section>
+    </main>
 
     <footer>
       <p>
