Completed the details page.

--- a/pages/details.html
+++ b/pages/details.html
@@ -31,7 +31,39 @@
       <h3>The more you know...</h3>
     </header>
 
-    <main class="container"></main>
+    <main class="container">
+      <section id="details">
+        <article>
+          <h2>Registries</h2>
+          <p>
+            We've decided to register at both Target and Amazon. A honeymoon
+            fund is also coming soon!
+          </p>
+          <a
+            href="https://www.target.com/gift-registry/giftgiver?registryId=9981a5b5c0414270845c1fa93e3a5186&lnk=registry_custom_url"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="btn"
+            id="target"
+            >Target
+          </a>
+          <a
+            href="https://www.amazon.com/wedding/registry/WLW83YSOO3XG?ref=wr_search_page_result_2r"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="btn"
+            id="amazon"
+            >Amazon
+          </a>
+        </article>
+      </section>
+      <section id="hotel">
+        <article>
+          <h2>Hotel</h2>
+          <p>More information coming soon!</p>
+        </article>
+      </section>
+    </main>
 
     <footer>
       <p>
