Made homepage responsive

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             src="/img/homepage-family.jpg"
             alt="Megan and Ryan on a couch with their dogs, Maggie and Charlie"
             loading="lazy"
+            class="photo-card"
           />
           <p>
             Ryan and Megan moved in together and built an apartment with the
