--- a/pages/venue.html
+++ b/pages/venue.html
@@ -67,7 +67,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.8036817593816!2d-73.68583858434063!3d40.72233804491946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c262e5f101b2f9%3A0xe945eb9316cdfe01!2sStewart%20Manor%20Country%20Club!5e0!3m2!1sen!2sus!4v1625944842145!5m2!1sen!2sus"
             width="100%"
             height="500px"
-            style="border: 0"
+            style="border: 2px solid #222"
             allowfullscreen=""
             loading="lazy"
           ></iframe>
