Added Photos page

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -31,8 +31,20 @@
       <h3>Have you not seen enough of us?</h3>
     </header>
 
-    <main class="container"></main>
-
+    <main class="container">
+      <section id="photos">
+        <article>
+          <div class="photo-card">
+            <img
+              src="../img/wp-amanda.jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+        </article>
+      </section>
+    </main>
     <footer>
       <p>
         &copy; 2021
