Completed site refactor

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav>
-      <ul role="list">
+      <ul role="list" class="container">
         <li><a href="../index.html">Home</a></li>
         <li><a href="/pages/photos.html">Photos</a></li>
         <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
@@ -31,12 +31,212 @@
       <h3>Have you not seen enough of us?</h3>
     </header>
 
-    <main class="container">
+    <main class="full-width-container">
       <section id="photos">
         <article>
           <div class="photo-card">
             <img
-              src="../img/wp-amanda.jpg"
+              src="../img/photo-gallery/meg-and-ryan_ (1).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (2).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (3).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (4).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (5).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (6).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (7).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (8).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (9).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (10).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (11).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (12).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (13).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (14).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (15).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (16).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (17).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (18).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (19).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (20).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (21).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (22).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (23).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (24).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (25).jpg"
+              alt="Amanda Laikin - Maid of Honor"
+              title="Amanda Laikin - Maid of Honor"
+              loading="lazy"
+            />
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/photo-gallery/meg-and-ryan_ (26).jpg"
               alt="Amanda Laikin - Maid of Honor"
               title="Amanda Laikin - Maid of Honor"
               loading="lazy"
