--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav>
-      <ul role="list">
+      <ul role="list" class="container">
         <li><a href="/index.html">Home</a></li>
         <li><a href="/pages/photos.html">Photos</a></li>
         <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
@@ -130,6 +130,15 @@
         >
         - made with ♥️
       </p>
+      <nav>
+        <ul role="list" class="container">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pages/photos.html">Photos</a></li>
+          <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+          <li><a href="/pages/venue.html">Venue</a></li>
+          <li><a href="/pages/details.html">Details</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
