--- a/pages/venue.html
+++ b/pages/venue.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav>
-      <ul role="list">
+      <ul role="list" class="container">
         <li><a href="../index.html">Home</a></li>
         <li><a href="/pages/photos.html">Photos</a></li>
         <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
