--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -17,7 +17,7 @@
 
   <body>
     <nav>
-      <ul role="list">
+      <ul role="list" class="container">
         <li><a href="../index.html">Home</a></li>
         <li><a href="/pages/photos.html">Photos</a></li>
         <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
@@ -31,7 +31,7 @@
       <h3>Who are we partying with?</h3>
     </header>
 
-    <main class="container">
+    <main class="full-width-container">
       <section id="wedding-party">
         <article class="bridesmaids">
           <h2>bridesmaids</h2>
