Added Moe's missing picture and changed appropriate photos to cover

--- a/pages/details.html
+++ b/pages/details.html
@@ -76,6 +76,15 @@
         >
         - made with ♥️
       </p>
+      <nav>
+        <ul role="list" class="container">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pages/photos.html">Photos</a></li>
+          <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+          <li><a href="/pages/venue.html">Venue</a></li>
+          <li><a href="/pages/details.html">Details</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
