--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -41,6 +41,7 @@
               alt="Amanda Laikin - Maid of Honor"
               title="Amanda Laikin - Maid of Honor"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Amanda Laikin</p>
             <p class="title">Maid of Honor</p>
@@ -51,6 +52,7 @@
               alt="Anna Young - Bridesmaid"
               title="Anna Young - Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Anna Young</p>
             <p class="title">Bridesmaid</p>
@@ -61,6 +63,7 @@
               alt="Emily Baio - Bridesmaid"
               title="Emily Baio - Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Emily Baio</p>
             <p class="title">Bridesmaid</p>
@@ -81,6 +84,7 @@
               alt="Erin Werner - Bridesmaid"
               title="Erin Werner - Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Erin Werner</p>
             <p class="title">Bridesmaid</p>
@@ -91,6 +95,7 @@
               alt="Joanna Bonura - Bridesmaid"
               title="Joanna Bonura - Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Joanna Bonura</p>
             <p class="title">Bridesmaid</p>
@@ -101,6 +106,7 @@
               alt="Samantha Motta - Bridesmaid"
               title="Samantha Motta - Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Samantha Motta</p>
             <p class="title">Bridesmaid</p>
@@ -111,6 +117,7 @@
               alt="Audrey Ryan - Junior Bridesmaid"
               title="Audrey Ryan - Junior Bridesmaid"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Audrey Ryan</p>
             <p class="title">Junior Bridesmaid</p>
@@ -134,6 +141,7 @@
               alt="Walter Furrer - Best Man"
               title="Walter Furrer - Best Man"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Walter Furrer</p>
             <p class="title">Best Man</p>
@@ -154,8 +162,20 @@
               alt="Richard Motta - Groomsman"
               title="Anthony Calderaro - Groomsman"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Richard Motta</p>
+            <p class="title">Groomsman</p>
+          </div>
+          <div class="photo-card">
+            <img
+              src="../img/wp-moe.jpg"
+              alt="Moe Tompkins - Groomsman"
+              title="Moe Tompkins - Groomsman"
+              loading="lazy"
+              class="cover"
+            />
+            <p class="name">Moe Tompkins</p>
             <p class="title">Groomsman</p>
           </div>
           <div class="photo-card">
@@ -164,6 +184,7 @@
               alt="Joseph Ryan - Groomsman"
               title="Joseph Ryan - Groomsman"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Joseph Ryan</p>
             <p class="title">Groomsman</p>
@@ -174,6 +195,7 @@
               alt="Thomas Ryan - Groomsman"
               title="Thomas Ryan - Groomsman"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Thomas Ryan</p>
             <p class="title">Groomsman</p>
@@ -184,6 +206,7 @@
               alt="Didier Valles - Groomsman"
               title="Didier Valles - Groomsman"
               loading="lazy"
+              class="cover"
             />
             <p class="name">Didier Valles</p>
             <p class="title">Groomsman</p>
@@ -216,6 +239,15 @@
         >
         - made with ♥️
       </p>
+      <nav>
+        <ul role="list" class="container">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/pages/photos.html">Photos</a></li>
+          <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+          <li><a href="/pages/venue.html">Venue</a></li>
+          <li><a href="/pages/details.html">Details</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
