Fixed typo on /wedding-party

--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -34,7 +34,7 @@
     <main class="full-width-container">
       <section id="wedding-party">
         <article class="bridesmaids">
-          <h2>bridesmaids</h2>
+          <h2>Bridesmaids</h2>
           <div class="photo-card">
             <img
               src="../img/wp-amanda.jpg"
