--- a/pages/venue.html
+++ b/pages/venue.html
@@ -12,6 +12,13 @@
     />
     <link rel="stylesheet" href="/css/css-reset.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#841122" />
+    <meta name="msapplication-TileColor" content="#1d2839" />
+    <meta name="theme-color" content="#f5f5f5" />
     <title>Megan & Ryan's Wedding | October 2021</title>
   </head>
 
