Added honeyfund link and gradient to headers

--- a/pages/details.html
+++ b/pages/details.html
@@ -43,7 +43,12 @@
         <article id="registries">
           <h2>Registries</h2>
           <p>We've decided to register at both Target and Amazon.</p>
-          <p>A honeymoon fund is also coming soon!</p>
+          <p>
+            Since we have been living for a couple of years now, our home is
+            already pretty full of everything we need. So in absense of more on
+            our registries you may choose to contribute funds to our honeymoon
+            in Mexico!
+          </p>
           <div>
             <a
               href="https://www.target.com/gift-registry/giftgiver?registryId=9981a5b5c0414270845c1fa93e3a5186&lnk=registry_custom_url"
@@ -60,6 +65,14 @@
               class="btn"
               id="amazon"
               >Amazon
+            </a>
+            <a
+              href="https://www.honeyfund.com/wedding/ryan-furrer-10-15-2021"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn"
+              id="honeyfund"
+              >Honeyfund
             </a>
           </div>
         </article>
