--- a/pages/details.html
+++ b/pages/details.html
@@ -77,9 +77,52 @@
           </div>
         </article>
         <section id="hotel">
+          <h2>Hotel</h2>
           <article>
-            <h2>Hotel</h2>
-            <p>More information coming soon!</p>
+            <h3>
+              <a
+                href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1626192855724&key=GRP&app=resvlink"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Courtyard Westbury Long Island</a
+              >
+            </h3>
+            <p>
+              We welcome our guests to book their stay at the
+              <a
+                href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1626192855724&key=GRP&app=resvlink"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Courtyard Westbury Long Island</a
+              >
+              where they can enjoy a discounted rate on their room by clicking
+              the link above (or below), or by
+              <a href="tel:+5165421001">calling</a> and referencing the
+              <span>'Ryan/Furrer Wedding Room Block- Group Code: RFW'</span>.
+            </p>
+
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.7725283351583!2d-73.59097738425355!3d40.74503057932845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c28765d3076af9%3A0x9db9102ff142b594!2sCourtyard%20by%20Marriott%20Westbury%20Long%20Island!5e0!3m2!1sen!2sus!4v1626469002656!5m2!1sen!2sus"
+              width="100%"
+              height="500px"
+              style="border: 2px solid #222"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+            <div>
+              <a
+                href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1626192855724&key=GRP&app=resvlink"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                id="hotel-book-online"
+                >Book Online
+              </a>
+
+              <a href="tel:+5165421001" class="btn" id="hotel-call-now"
+                >Call Now
+              </a>
+            </div>
           </article>
         </section>
       </section>
